--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
                 padding: 5px;
                 min-height: calc(100% - (5px * 2));
             }
-                #info > div {
+                #info > div { /* event logs */
                     position: relative;
                     margin-bottom: 3px;
                 }
