--- a/style.css
+++ b/style.css
@@ -20,44 +20,66 @@ body {
             font-size: calc(5vw);
         }
 
-    #events-info {
-        position: absolute;
-        padding: 10px;
-        margin: 1px;
-        max-width: 400px;
-        background: #0000;
-        color: #FFF0;
-        transition: background 0.5s, color 0.5s;
-        z-index: 1;
+    #middle-section {
+        position: relative;
     }
-        .events-info-visible {
-            background: #000D !important;
-            color: #FFF !important;
-        }
-    #events {
-        height: 40%;
-        display: flex;
-        justify-content: space-between;
-        align-content: center;
-        flex-wrap: wrap;
-        box-shadow: inset 0 0 0 1px #000;
-    }
-        .event {
-            position: relative;
+        .popup-info {
+            position: absolute;
             padding: 10px;
-            margin: auto;
-            margin-top: 10px;
-            border: 1px solid #000;
-            border-radius: 4px;
+            margin: 1px;
+            max-width: 400px;
+            background: #0000;
+            color: #FFF0;
+            transition: background 0.5s, color 0.5s;
+            z-index: 1;
         }
-            .event:hover {
-                box-shadow: inset 0 0 3px 2px #0007;
-                background: #00000009;
+        #events-info {
+            top: 0;
+        }
+        #events-property-info {
+            bottom: 0;
+        }
+            .popup-info-visible {
+                background: #000D !important;
+                color: #FFF !important;
             }
-            .event-highlighted {
-                box-shadow: inset 0 0 0 3px #000;
-                background: #00000020;
+        #events {
+            height: 40%;
+            display: flex;
+            justify-content: space-between;
+            align-content: center;
+            flex-wrap: wrap;
+            box-shadow: inset 0 0 0 1px #000;
+        }
+            .event {
+                position: relative;
+                padding: 10px;
+                margin: auto;
+                margin-top: 10px;
+                border: 1px solid #000;
+                border-radius: 4px;
+                background-color: #0000;
+                user-select: text;
             }
+                .event:hover {
+                    box-shadow: inset 0 0 3px 2px #0007;
+                    background: #00000009;
+                }
+                .event-selected {
+                    box-shadow: inset 0 0 0 3px #000;
+                    background: #00000020;
+                }
+                .highlight:before {
+                    content: "";
+                    z-index: -1;
+                    width: 100%;
+                    height: 100%;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    animation-name: highlight;
+                    animation-duration: 2s;
+                }
 
     #info-outer-wrapper {
         position: relative;
