--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 
     #middle-section {
         position: relative;
+        box-shadow: inset 0 0 0 1px #000;
     }
         .popup-info {
             position: absolute;
@@ -49,7 +50,7 @@ body {
             justify-content: space-between;
             align-content: center;
             flex-wrap: wrap;
-            box-shadow: inset 0 0 0 1px #000;
+            margin-inline: 5vw;
         }
             .event {
                 position: relative;
@@ -100,7 +101,9 @@ body {
             }
                 #info > div { /* event logs */
                     position: relative;
-                    margin-bottom: 3px;
+                    margin-bottom: 4px;
+                    padding-block: 2px;
+                    padding-inline: 4px;
                 }
                     .logging-info {
                         border: 1px solid #0004;
@@ -134,11 +137,13 @@ body {
                         position: absolute;
                         top: 0;
                         right: 0;
-                        background: #0003;
+                        background: #EEED;
                         padding: 5px;
                         margin: 1px;
                         height: calc(100% - 12px);
                         overflow-y: scroll;
+                        border-left: 1px solid #000;
+                        z-index: 1;
                     }
                         .hidden {
                             display: none;
