--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ body {
                 box-shadow: inset 0 0 0 1px #000;
                 padding: 5px;
                 min-height: calc(100% - (5px * 2));
+                z-index: 0;
             }
                 #info > div { /* event logs */
                     position: relative;
