Allows linebreak in navigator table for very small-width devices and the possibility the data could change in future.

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
             #system-info > table {
                 background: #FFFD;
                 border-collapse: collapse;
+                line-break: anywhere;
             }
                 #system-info > table td {
                     padding: 2px 6px;
